--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-<color name="gray">#3F3F3F</color>
+    <color name="gray">#3F3F3F</color>
     <color name="orange">#F69300</color>
-
+    <color name="orange_700">#bf7000</color>
 
     <color name="lightgray">#DFDFDF</color>
     <color name="darkergray">#AFAEAE</color>
