--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -10,6 +10,10 @@
         android:title="Question"
         android:icon="@drawable/ic_question" />
     <item
+        android:id="@+id/answerFragment"
+        android:title="Answer"
+        android:icon="@drawable/ic_answer" />
+    <item
         android:id="@+id/profileFragment"
         android:title="Profile"
         android:icon="@drawable/ic_profile" />
