--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -35,14 +35,15 @@
     <ScrollView
         android:id="@+id/tvViewComment"
         android:layout_width="378dp"
-        android:layout_height="520dp"
+        android:layout_height="393dp"
+        android:layout_marginBottom="39dp"
         android:background="@drawable/blackborder"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tfComment"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.497">
+        app:layout_constraintVertical_bias="1.0">
 
         <TextView
             android:id="@+id/tvCommentDisplay"
@@ -56,12 +57,13 @@
         android:id="@+id/tvQna"
         android:layout_width="376dp"
         android:layout_height="76dp"
+        android:layout_marginBottom="14dp"
         android:background="@drawable/blackborder"
         android:text="Question or Answer display here"
         app:layout_constraintBottom_toTopOf="@+id/tvViewComment"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintHorizontal_bias="0.542"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.52" />
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
