--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,15 +104,15 @@ android:layout_above="@id/introduction"
 
     <TextView
         android:id="@+id/noAccountTv"
+        style="@style/TextAppearance.MaterialComponents.Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_account"
-        android:textColor="@color/white"
-
         android:layout_alignParentBottom="true"
-        android:padding="5dp"
+
         android:layout_centerHorizontal="true"
-        style="@style/TextAppearance.MaterialComponents.Caption"/>
+        android:padding="5dp"
+        android:text="@string/no_account"
+        android:textColor="@color/white" />
 
 
 </RelativeLayout>
