--- a/app/src/main/res/layout/activity_add_tutorial.xml
+++ b/app/src/main/res/layout/activity_add_tutorial.xml
@@ -37,7 +37,7 @@
                 android:layout_marginStart="157dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="157dp"
-                android:backgroundTint="#3F51B5"
+                android:backgroundTint="@color/orange_700"
                 android:foregroundGravity="center"
                 android:text="@string/post"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +74,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="131dp"
                 android:text="@string/add_tutorial"
-                android:textColor="#3F51B5"
+                android:textColor="@color/orange_700"
                 android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
