--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -23,44 +23,39 @@
         android:layout_width="312dp"
         android:layout_height="51dp"
         android:ems="10"
+        android:hint="Enter comment here..."
         android:inputType="textPersonName"
-        android:text="Enter comment here..."
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/btnSendComment"
         app:layout_constraintEnd_toStartOf="@+id/btnSendComment"
-        app:layout_constraintHorizontal_bias="0.629"
+        app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        app:layout_constraintTop_toTopOf="@+id/btnSendComment"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <ScrollView
-        android:id="@+id/tvViewComment"
-        android:layout_width="378dp"
-        android:layout_height="393dp"
-        android:layout_marginBottom="39dp"
-        android:background="@drawable/blackborder"
-        app:layout_constraintBottom_toTopOf="@+id/tfComment"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/commentDisplay"
+        android:layout_width="373dp"
+        android:layout_height="392dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        app:layoutManager="LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@+id/btnSendComment"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <TextView
-            android:id="@+id/tvCommentDisplay"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/blackborder"
-            android:text="Display other comments here" />
-    </ScrollView>
+        app:layout_constraintVertical_bias="0.858"
+        tools:listitem="@layout/comment_display" />
 
     <TextView
         android:id="@+id/tvQna"
         android:layout_width="376dp"
         android:layout_height="76dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="23dp"
         android:background="@drawable/blackborder"
         android:text="Question or Answer display here"
-        app:layout_constraintBottom_toTopOf="@+id/tvViewComment"
+        app:layout_constraintBottom_toTopOf="@+id/commentDisplay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.542"
         app:layout_constraintStart_toStartOf="parent"
