--- a/app/src/main/res/layout/tutorial_comment.xml
+++ b/app/src/main/res/layout/tutorial_comment.xml
@@ -28,8 +28,8 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="290dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:background="@drawable/greyframe"
                 android:paddingBottom="3dp">
 
