--- a/app/src/main/res/layout/comment_display.xml
+++ b/app/src/main/res/layout/comment_display.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="0dp">
+    android:id="@+id/commentRecyclerView"
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="399dp"
@@ -53,16 +54,6 @@
                     android:layout_marginTop="1dp"
                     android:text="@string/date"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvUserName" />
-
-                <TextView
-                    android:id="@+id/commentTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginTop="1dp"
-                    android:text="@string/time"
-                    app:layout_constraintStart_toEndOf="@+id/commentDate"
                     app:layout_constraintTop_toBottomOf="@+id/tvUserName" />
 
                 <TextView
