--- a/app/src/main/res/layout/activity_questions_list.xml
+++ b/app/src/main/res/layout/activity_questions_list.xml
@@ -8,26 +8,22 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/questionsList"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="404dp"
+        android:layout_height="576dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/reviewQuestionsHeader"
+        tools:layout_editor_absoluteX="0dp"
         tools:listitem="@layout/ques_item" />
 
     <TextView
         android:id="@+id/reviewQuestionsHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Your Questions"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/questionsList"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
